<resources>
    <string name="DD">ALIMENTOS</string>

    <string name="D1">SIGN UP</string>
    <string name="app_name">alimentos</string>
    <string name="upl">Show Uploads</string>
    <string name="D2">LOG IN</string>
    <string name="DDD">Already have an account ?</string>
    <string name="D3">IT FEELS GREAT TO SHARE</string>
    <string name="D4">Join Your Journey</string>
    <string name="medicine">Medicines</string>
    <string name="med_item_2">Antihistamine</string>
    <string name="antacid_txt">Antacids</string>
    <string name="first_name">Full Name</string>
    <string name="last_name">Password</string>
    <string name="map_str">Map</string>
    <string name="Ngo_up">SIGN UP FOR NGO </string>
    <string name="Single_up">SIGN UP FOR USER </string>
    <string name="Ngo_name">NGO Name</string>
    <string name="add">Address</string>
    <string name="log_out">LOG OUT</string>
    <string name="capture">Share Food Capture</string>
    <string name="camera">Capture</string>
    <string name="upload">Upload</string>
    <string name="band">Bandages</string>
    <string name="Food_name">Name of Food</string>
    <string name="antithistamine_desc">Acetaminophen is a pain reliever and fever reducer.</string>
    <string name="bandages_desc">For covering wounds or to keep dressings in place, to applying pressure controlling bleeding</string>

    <string name="D5">Email</string>

    <string name="D6">If you signed up previously via Facebook, use that email</string>

    <string name="D7">Login via a magic link</string>


    <string name="D8">

<a href="">Or login via passward</a>
    </string>

    <string name="D9">FIrst name</string>

    <string name="DD1">Last name</string>

    <string name="DD2">Having a problem?</string>

    <string name="DD3">Sign up</string>

    <string name="AA">Contact us</string>

    <string name="AAA">Join Alimentos</string>

    <string name="z">By joining I agree to Alimentos </string>
    <string name="instruction">Your Food item is : </string>


    <string name="order_now">Get Now</string>
    <string name="chat">Chat</string>
    <string name="receiver">Receiver</string>
    <string name="donor">Donor</string>
    <string name="whichrole">Which Role do you want to have ?</string>
    <string name="X">

<a href="">terms and conditions</a>

</string>

    <string name="S">Password</string>


    -
    <string name="G">

<a href="">Forgotten passward?</a>

</string>

    <string name="H">Login now</string>


    -
    <string name="J">

    <a href="">Or login via a magic link</a>

    </string>
    <string name="title_activity_nav">activity_nav</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

</resources>