<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"


    tools:showIn="navigation_view"

    >

    <group android:checkableBehavior="single"   >
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"

            android:title="@string/menu_home"

            />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/medicine" />
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_map"
            android:title="@string/map_str" />

        <item
            android:id="@+id/nav_logout"
            android:title="@string/log_out"
            android:icon="@drawable/ic_log"
            />

        <item
            android:id="@+id/nav_capture"
            android:title="@string/capture"
            android:icon="@drawable/ic_baseline_food_bank_24"


            />

        <item
            android:id="@+id/chatmenu"
            android:title="@string/chat"
            android:icon="@drawable/ic_send_black_2"


            />







    </group>

</menu>