<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/picker_3"
    android:layout_height="match_parent"
    tools:context=".ngo_register">

    <EditText
        android:id="@+id/ngo_name_edit_text"
        android:layout_width="wrap_content"
        android:textColor="@color/black"

        android:layout_height="wrap_content"
        android:background="@drawable/rectangle_white"
        android:ems="10"
        android:hint="@string/Ngo_name"
        android:inputType="textPersonName"
        android:paddingLeft="50dp"
        android:paddingRight="10dp"
        android:textColorHint="@color/grey"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.592"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.102" />

    <EditText
        android:id="@+id/ngo_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle_white"
        android:textColor="@color/black"
        android:ems="10"
        android:hint="@string/D5"
        android:inputType="textPersonName"
        android:paddingLeft="50dp"
        android:paddingRight="10dp"
        android:textColorHint="@color/grey"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.592"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.276" />

    <EditText
        android:id="@+id/ngo_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle_white"
        android:ems="10"
        android:textColor="@color/black"
        android:hint="@string/last_name"
        android:inputType="textPassword"
        android:paddingLeft="50dp"
        android:paddingRight="10dp"
        android:textColorHint="@color/grey"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.592"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.435" />

    <EditText
        android:id="@+id/ngo_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle_white"
        android:ems="10"
        android:hint="@string/add"
        android:inputType="textPersonName"
        android:paddingLeft="50dp"
        android:paddingRight="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/grey"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.592"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.578" />

    <Button
        android:id="@+id/button6"
        android:layout_width="165dp"
        android:layout_height="55dp"
        android:background="@color/purple_500"
        android:text="@string/D1"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.801" />
</androidx.constraintlayout.widget.ConstraintLayout>