<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/picker_2"

    tools:context=".HomeActivity">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:background="@drawable/alimentos_pic"
        android:paddingStart="25dp"
        android:paddingLeft="25dp"
        android:paddingTop="0dp"
        android:paddingEnd="20dp"
        android:paddingRight="20dp"

        android:paddingBottom="15dp"

        android:shadowColor="@android:color/holo_purple"
        android:textColor="?attr/actionModeSplitBackground"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.039" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="180dp"
        android:layout_height="42dp"

        android:paddingTop="1.5dp"

        android:paddingBottom="5dp"
        android:text="@string/DDD"
        android:textColor="#CD2C2C"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.917" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/D2"

        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.923"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.927" />

    <Button
        android:id="@+id/button3"
        android:layout_width="178dp"
        android:layout_height="51dp"

        android:width="350dp"


        android:text="@string/D1"
        android:textSize="22sp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.702" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="198dp"
        android:layout_height="26dp"

        android:text="@string/D3"
        android:textAllCaps="true"
        android:textColor="#EF1A7D"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.167" />

</androidx.constraintlayout.widget.ConstraintLayout>