<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/picker_4"

    tools:context=".login_activity">


    <EditText
        android:id="@+id/pass_login"
        android:layout_width="325dp"
        android:layout_height="66dp"

        android:layout_alignParentTop="true"
        android:hint="@string/S"
        android:textColorHint="@color/grey"


        android:background="@drawable/rectangle_signin"
        android:ems="10"
        android:paddingLeft="10dp"
        android:paddingRight="5dp"


        android:inputType="textPassword"
        android:shadowColor="#151414"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.248" />

    <EditText
        android:id="@+id/email_login"
        android:layout_width="325dp"
        android:layout_height="66dp"
        android:layout_alignTop="@+id/pass_login"
        android:hint="@string/D5"
        android:textColorHint="@color/grey"
        android:paddingLeft="10dp"
        android:paddingRight="5dp"

        android:background="@drawable/rectangle_signin"
        android:ems="10"


        android:inputType="textEmailAddress"
        android:shadowColor="#151414"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.103" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="110dp"
        android:layout_height="35dp"
        android:text="@string/D5"
        android:textSize="25sp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.142"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022" />



    <Button
        android:id="@+id/button_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:background="@color/grey"

        android:text="@string/D7"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/go_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_alignBottom="@+id/button_sign_in"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.605" />

</androidx.constraintlayout.widget.ConstraintLayout>